# mltk

./: CMakeLists.txt  Jenkinsfile  README.md  install_mltk.py  mltk.code-workspace  pytest.ini  setup.py
cpp/audio_feature_generator_wrapper/: CMakeLists.txt
cpp/mvp_wrapper/: CMakeLists.txt  __init__.py  mvp_tflite_micro_accelerator.hpp  mvp_wrapper_pybind11.cc
cpp/shared/apps/audio_classifier/: CMakeLists.txt  README.md  audio_provider.cc  cli_opts.cc  cli_opts.hpp  command_responder.cc  feature_provider.cc  main.cc  micro_features_generator.cc  micro_model_settings.cc  micro_model_settings.hpp  mltk_audio_classifier.slcp  recognize_commands.cc  recognize_commands.hpp
cpp/shared/apps/audio_classifier/python/alexa_demo/: alexa_demo.py
cpp/shared/apps/fingerprint_authenticator/: CMakeLists.txt  README.md  app_controller.cc  fingerprint_authenticator.cc  fingerprint_vault.c  main.cc  mltk_fingerprint_authenticator.slcp
cpp/shared/apps/image_classifier/: CMakeLists.txt  README.md  main.cc  mltk_image_classifier.slcp
cpp/shared/apps/model_profiler/: CMakeLists.txt  README.md  main.cc  mltk_model_profiler.slcp
cpp/shared/cmsis/: CMakeLists.txt
cpp/shared/gecko_sdk/: CMakeLists.txt
cpp/shared/jlink_stream/: CMakeLists.txt
cpp/shared/libsoundio/: CMakeLists.txt  sl_mic.cc
cpp/shared/tflite_micro/: CMakeLists.txt  micro_graph.cc  mltk_tflite_micro_accelerator_recorder.hpp  mltk_tflite_micro_helper.cc  mltk_tflite_micro_helper.hpp  mltk_tflite_micro_internal.cc  mltk_tflite_micro_internal.hpp  mltk_tflite_micro_recorded_data.cc  patch_tensorflow.py  simple_memory_allocator.cc
cpp/shared/tflite_micro_model/: CMakeLists.txt
cpp/shared/tflite_micro_mvp_kernels/: CMakeLists.txt  README.md  tflite_micro_mvp_accelerator.cc
cpp/shared/tflite_model_parameters/: CMakeLists.txt
cpp/tflite_micro_wrapper/: CMakeLists.txt  tflite_micro_accelerator_wrapper.hpp  tflite_micro_model_wrapper.cc  tflite_micro_model_wrapper.hpp  tflite_micro_wrapper_helper.cmake
cpp/tools/cmake/: Findmltk_platform_brd2601a.cmake  Findmltk_platform_brd4166a.cmake  Findmltk_platform_brd4186b.cmake  Findmltk_platform_stk3701a.cmake  Findmltk_tflite_micro_mvp_kernels.cmake  utilities.cmake
cpp/tools/commander/: CMakeLists.txt
cpp/tools/utils/: build_docs_mltk_cli.py  build_python_package_mltk_cli.py  build_tflite_micro_wrapper_mltk_cli.py  generate_model_header.py
docs/: command_line.md  genindex.html  index.html  installation.md  overview.rst  py-modindex.html  search.html  searchindex.js  tutorials.md  why_mltk.md
docs/_modules/: index.html
docs/_sources/: index.md.txt
docs/_sources/docs/: command_line.md.txt  examples.md.txt  faq.md.txt  installation.md.txt  tutorials.md.txt  why_mltk.md.txt
docs/_static/: panels-variables.929109b1a0703bf65c368b8446834ec0.css  panels-variables.9896e7231db0c79482a4fcd7da87c14a.css
docs/_static/css/: custom.css
docs/_static/js/: custom.js
docs/_static/kws_overview/: index.html
docs/_static/overview/: index.html
docs/_static/templates/: google_analytics.html  layout.html  survey_dialog.html  survey_link.html
docs/audio/: audio_feature_generator.md  audio_utilities.md
docs/command_line/: fingerprint_reader.md
docs/cpp_development/: build_options.md  command_line.md  index.md  simplicity_studio.md  vscode.md
docs/cpp_development/examples/: hello_world.md  index.md  model_profiler.md
docs/docs/: command_line.html  examples.html  faq.html  installation.html  overview.html  tutorials.html  why_mltk.html
docs/docs/audio/: audio_feature_generator.html  audio_utilities.html  keyword_spotting_overview.html
docs/docs/command_line/: classify_audio.html  classify_audio_cli_help.html  classify_image.html  classify_image_cli_help.html  commander.html  commander_cli_help.html  evaluate.html  evaluate_cli_help.html  fingerprint_reader.html  fingerprint_reader_cli_help.html  index.html  profile.html  profile_cli_help.html  quantize.html  quantize_cli_help.html  ssh.html  ssh_cli_help.html  summarize.html  summarize_cli_help.html  tensorboard.html  tensorboard_cli_help.html  train.html  train_cli_help.html  update_params.html  update_params_cli_help.html  view.html  view_audio.html  view_audio_cli_help.html  view_cli_help.html
docs/docs/cpp_development/: build_options.html  command_line.html  index.html  simplicity_studio.html  vscode.html
docs/docs/faq/: how_to_debug_model_during_training.html  how_to_reduce_model_size.html  how_to_run_model_on_embedded.html  index.html  linux_why_is_gpu_not_working.html  where_is_my_trained_model.html  why_does_eval_not_work_with_tflite.html  why_is_model_not_working_on_embedded.html  windows_tensorflow_dll_error.html
docs/docs/guides/: guides.html  index.html  model_archive.html  model_evaluation.html  model_io_dtypes.html  model_parameters.html  model_profiler.html  model_summary.html  (+9 more)
docs/guides/: guides.md  model_io_dtypes.md  model_profiler.md  model_profiler_utility.md  model_specification.md
docs/other/: cpp_development_with_vscode.md  repository_overview.md
docs/python_api/: python_api.md
docs/website_builder/: README.md
mltk/: __init__.py
mltk/cli/: __init__.py  classify_audio_mltk_cli.py  classify_image_mltk_cli.py  commander_mltk_cli.py  evaluate_mltk_cli.py  fingerprint_reader_mltk_cli.py  main.py  train_mltk_cli.py  update_params_mltk_cli.py  utest_mltk_cli.py  utils.py
mltk/core/: evaluate_autoencoder.py  evaluate_classifier.py  evaluate_model.py  profile_model.py  profiling_results.py  quantize_model.py  summarize_model.py  train_model.py  update_model_parameters.py  view_model.py
mltk/examples/: evaluate_model.ipynb  profile_model.ipynb  quantize_model.ipynb  summarize_model.ipynb  train_model.ipynb  update_params.ipynb  view_model.ipynb
mltk/tutorials/: add_existing_script_to_mltk.ipynb  fingerprint_authentication.ipynb  keyword_spotting_alexa.ipynb  keyword_spotting_on_off.ipynb  model_debugging.ipynb  model_optimization.ipynb  onnx_to_tflite.ipynb  synthetic_audio_dataset_generation.ipynb
mltk/utils/: archive.py  bin2header.py  cmake.py  path.py  python.py  shell_cmd.py
(+546 files in other folders)
